[gd_scene load_steps=31 format=2]

[ext_resource path="res://src/Game/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/idle.png" type="Texture" id=2]
[ext_resource path="res://src/Classes/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://src/Game/Player/States/Air.gd" type="Script" id=4]
[ext_resource path="res://src/Game/Player/States/Walk.gd" type="Script" id=5]
[ext_resource path="res://src/Game/Player/States/Idle.gd" type="Script" id=6]
[ext_resource path="res://Assets/Player/walk.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/jumping.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player/shooting.png" type="Texture" id=9]
[ext_resource path="res://src/Game/Player/States/Shoot.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 8, 14.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 6.5, 30.5 )

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "Shoot"
length = 0.56
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 29 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18, 0.2, 0.22, 0.24, 0.26, 0.28, 0.3, 0.32, 0.34, 0.36, 0.38, 0.4, 0.42, 0.44, 0.46, 0.48, 0.5, 0.52, 0.54, 0.56 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("StateMachine/Shoot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.56 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "change_state"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Walk"
length = 0.7
loop = true
step = 0.028
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.028, 0.056, 0.084, 0.112, 0.14, 0.168, 0.196, 0.224, 0.252, 0.28, 0.308, 0.336, 0.364, 0.392, 0.42, 0.448, 0.476, 0.504, 0.532, 0.56, 0.588, 0.616, 0.644, 0.672 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.224, 0.588 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_footstep_sound"
}, {
"args": [  ],
"method": "play_footstep_sound"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Shoot"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=6]

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=8]
states/Idle/node = SubResource( 4 )
states/Idle/position = Vector2( 296, 51 )
states/Jump/node = SubResource( 15 )
states/Jump/position = Vector2( 211, 168 )
states/Shoot/node = SubResource( 16 )
states/Shoot/position = Vector2( 448, 173 )
states/Walk/node = SubResource( 5 )
states/Walk/position = Vector2( 528, 51 )
transitions = [ "Walk", "Idle", SubResource( 6 ), "Idle", "Walk", SubResource( 7 ), "Jump", "Idle", SubResource( 17 ), "Idle", "Jump", SubResource( 18 ), "Idle", "Shoot", SubResource( 19 ), "Shoot", "Idle", SubResource( 20 ) ]
start_node = "Idle"
graph_offset = Vector2( -21, -59 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[sub_resource type="Animation" id=11]
resource_name = "Squish"
length = 0.4
step = 0.05

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
collision/safe_margin = 0.001
script = ExtResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
visible = false
position = Vector2( 0, 0.5 )
shape = SubResource( 12 )

[node name="Timer" type="Timer" parent="Hurtbox"]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 16 )
texture = ExtResource( 2 )
offset = Vector2( -1, -16 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 1.5 )
shape = SubResource( 10 )

[node name="BulletSpawnPoint" type="Position2D" parent="."]
position = Vector2( 31, -14.5 )

[node name="BulletSpawnPointFlipped" type="Position2D" parent="."]
position = Vector2( -33, -14.5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Jump = SubResource( 13 )
anims/RESET = SubResource( 3 )
anims/Shoot = SubResource( 14 )
anims/Walk = SubResource( 2 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 9 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Shoot" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="EffectsAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Squish = SubResource( 11 )

[node name="ShootingBuffer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true
